fixed second navbar app-header-nav to reduce spacing from top nav bar

--- a/src/assets/css/tolkits.css
+++ b/src/assets/css/tolkits.css
@@ -6335,7 +6335,7 @@ ul.sport {
     width: 100%;
   }
   .app-header-nav {
-    margin-top: 140px;
+    margin-top: 110px;
   }
 }
 
